--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -20,7 +20,7 @@
           <a href="https://twitter.com/left_pad" class="hover:text-his-green transition-colors border-b border-his-green/10 hover:border-his-green">Henry</a>
         </p>
         <p class="text-xs text-his-text-secondary leading-loose">
-          Cover Art: <span class="text-his-text-tertiary">Jessica Han</span> • Music: <a href="https://twitter.com/ken_wheeler" class="hover:text-his-green transition-colors">Ken Wheeler</a>
+          Cover Art: <span class="text-his-text-tertiary">Jessica Han</span> • Music: <a href="https://twitter.com/kenwheeler" class="hover:text-his-green transition-colors">Ken Wheeler</a>
         </p>
       </div>
 
