--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -90,9 +90,9 @@ const { slug, Content, headings, frontmatter, episodeNumber } = Astro.props;
 
     <div class="mx-auto max-w-3xl">
       <main>
-        <blockquote class="text-sm leading-relaxed text-his-text-secondary max-w-xl mx-auto mb-6 sm:mb-8 px-2 sm:px-0">
+        <p class="text-sm leading-relaxed text-his-text-secondary max-w-xl mx-auto mb-6 sm:mb-8 px-2 sm:px-0">
           {frontmatter.description}
-        </blockquote>
+        </p>
         <Content />
       </main>
     </div>
